--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <div class="education-container">
                     <span class="educ-label">
                         <i class="fa-solid fa-school"></i>
-                        Shools
+                        Schools
                     </span>
                 <div class="educ-box-container">
                     <div class="educ-box"  data-aos="fade-up">
@@ -242,7 +242,7 @@
                     <div class="educ-box"  data-aos="fade-up">
                         <span class="educ-year">2022-2023</span>
                         <strong>Elementary School</strong>
-                        <span class="educ-location">Bagong Bayan Elementay School</span>
+                        <span class="educ-location">Bagong Bayan Elementary School</span>
                         <img src="elementary.jpg" alt="education">
 
                     </div>
